--- a/views/index.liquid
+++ b/views/index.liquid
@@ -7,7 +7,7 @@
   <div>
     {% for person in ninetySeventyOne %}
       <article>
-        <a>  <img src="{{ person.avatar }}" width="150px" href="/student/{{ person.id }}" style="border: 5px {{ person.fav_color }} solid"></a>
+        <a href="/student/{{ person.id }}"><img src="{{ person.avatar }}" width="150px" style="border: 5px {{ person.fav_color }} solid"></a>
       <p> {{ person.name }} </p>
       </article>
     {% endfor %}
@@ -18,7 +18,7 @@
   <div>
     {% for person in ninetySeventyThree %}
       <article>
-      <a> <img src="{{ person.avatar }}" width="150px" href="/student/{{ person.id }}" style="border: 5px {{ person.fav_color }} solid"></a>
+        <a href="/student/{{ person.id }}"><img src="{{ person.avatar }}" width="150px" style="border: 5px {{ person.fav_color }} solid"></a>
       <p> {{ person.name }} </p>
       </article>
     {% endfor %}
@@ -29,7 +29,7 @@
   <div>
     {% for person in ninetyEightyFour %}
       <article>
-       <img src="{{ person.avatar }}" width="150px" href="/student/{{ person.id }}" style="border: 5px {{ person.fav_color }} solid"></a>
+        <a href="/student/{{ person.id }}"><img src="{{ person.avatar }}" width="150px" style="border: 5px {{ person.fav_color }} solid"></a>
       <p> {{ person.name }} </p>
       </article>
     {% endfor %}
@@ -40,7 +40,7 @@
   <div>
     {% for person in ninetyNinety %}
       <article>  
-        <img src="{{ person.avatar }}" width="150px" href="/student/{{ person.id }}" style="border: 5px {{ person.fav_color }} solid"></a>
+        <a href="/student/{{ person.id }}"><img src="{{ person.avatar }}" width="150px" style="border: 5px {{ person.fav_color }} solid"></a>
       <p> {{ person.name }} </p>
       </article>
     {% endfor %}
@@ -51,7 +51,7 @@
   <div>
     {% for person in ninetyNinetyFour %}
       <article>
-       <img src="{{ person.avatar }}" width="150px" href="/student/{{ person.id }}" style="border: 5px {{ person.fav_color }} solid"></a>
+        <a href="/student/{{ person.id }}"><img src="{{ person.avatar }}" width="150px" style="border: 5px {{ person.fav_color }} solid"></a>
       <p> {{ person.name }} </p>
       </article>
     {% endfor %}
@@ -62,7 +62,7 @@
   <div>
     {% for person in ninetyNinetyNine %}
       <article>
-       <img src="{{ person.avatar }}" width="150px" href="/student/{{ person.id }}" style="border: 5px {{ person.fav_color }} solid"></a>
+        <a href="/student/{{ person.id }}"><img src="{{ person.avatar }}" width="150px" style="border: 5px {{ person.fav_color }} solid"></a>
       <p> {{ person.name }} </p>
       </article>
     {% endfor %}
@@ -73,7 +73,7 @@
   <div>
     {% for person in twoThousands %}
       <article>
-       <img src="{{ person.avatar }}" width="150px" href="/student/{{ person.id }}" style="border: 5px {{ person.fav_color }} solid"></a>
+        <a href="/student/{{ person.id }}"><img src="{{ person.avatar }}" width="150px" style="border: 5px {{ person.fav_color }} solid"></a>
       <p> {{ person.name }} </p>
       </article>
     {% endfor %}
@@ -84,7 +84,7 @@
   <div>
     {% for person in twoThousandOne %}
       <article>
-       <img src="{{ person.avatar }}" width="150px" href="/student/{{ person.id }}" style="border: 5px {{ person.fav_color }} solid"></a>
+        <a href="/student/{{ person.id }}"><img src="{{ person.avatar }}" width="150px" style="border: 5px {{ person.fav_color }} solid"></a>
       <p> {{ person.name }} </p>
       </article>
     {% endfor %}
@@ -95,7 +95,7 @@
   <div>
     {% for person in twoThousandTwo %}
       <article>
-       <img src="{{ person.avatar }}" width="150px" href="/student/{{ person.id }}" style="border: 5px {{ person.fav_color }} solid"></a>
+        <a href="/student/{{ person.id }}"><img src="{{ person.avatar }}" width="150px" style="border: 5px {{ person.fav_color }} solid"></a>
       <p> {{ person.name }} </p>
       </article>
     {% endfor %}
@@ -106,7 +106,7 @@
   <div>
     {% for person in twoThousandThree %}
       <article>
-        <img src="{{ person.avatar }}" width="150px" href="/student/{{ person.id }}" style="border: 5px {{ person.fav_color }} solid"></a>
+        <a href="/student/{{ person.id }}"><img src="{{ person.avatar }}" width="150px" style="border: 5px {{ person.fav_color }} solid"></a>
       <p> {{ person.name }} </p>
       </article>
     {% endfor %}
@@ -117,7 +117,7 @@
   <div>
     {% for person in twoThousandFour %}
       <article>
-       <img src="{{ person.avatar }}" width="150px" href="/student/{{ person.id }}" style="border: 5px {{ person.fav_color }} solid"></a>
+        <a href="/student/{{ person.id }}"><img src="{{ person.avatar }}" width="150px" style="border: 5px {{ person.fav_color }} solid"></a>
       <p> {{ person.name }} </p>
       </article>
     {% endfor %}
@@ -128,7 +128,7 @@
   <div>
     {% for person in twoThousandFive %}
       <article>
-       <img src="{{ person.avatar }}" width="150px" href="/student/{{ person.id }}" style="border: 5px {{ person.fav_color }} solid"></a>
+        <a href="/student/{{ person.id }}"><img src="{{ person.avatar }}" width="150px" style="border: 5px {{ person.fav_color }} solid"></a>
       <p> {{ person.name }} </p>
       </article>
     {% endfor %}
@@ -139,7 +139,7 @@
   <div>
     {% for person in twoThousandSix %}
       <article>
-       <img src="{{ person.avatar }}" width="150px" href="/student/{{ person.id }}"style="border: 5px {{ person.fav_color }} solid"></a>
+        <a href="/student/{{ person.id }}"><img src="{{ person.avatar }}" width="150px" style="border: 5px {{ person.fav_color }} solid"></a>
       <p> {{ person.name }} </p>
       </article>
     {% endfor %}
@@ -150,7 +150,7 @@
   <div>
     {% for person in twoThousandSeven %}
       <article>
-       <img src="{{ person.avatar }}" width="150px" href="/student/{{ person.id }}"style="border: 5px {{ person.fav_color }} solid"></a>
+        <a href="/student/{{ person.id }}"><img src="{{ person.avatar }}" width="150px" style="border: 5px {{ person.fav_color }} solid"></a>
       <p> {{ person.name }} </p>
       </article>
     {% endfor %}
@@ -160,46 +160,15 @@
 
 <div class="year">
   {% comment %} hier komt de waarde die ook zichtbaar is op de slider {% endcomment %}
-    <h2 class="yearof">1970</h2>
+    <h2 class="yearof">2003</h2>
 
-    <section class="slidecontainer">
+    {% comment %} <section class="slidecontainer">
       <input class="slider" type="range" min="1970" max="2010" value="1970" class="slider" id="sliderControl">
-    </section>
+    </section> {% endcomment %}
 
 </div>
 
-{% comment %} Kate {% endcomment %}
-<div class="person">
-  <img src="{{ person.avatar }}" width="300px" style="border: 10px {{ person.fav_color }} solid">
-  <p>{{ person.name }}</p>
-  <p>{{ person.bio }}</p>
-</div>
 
-
-<div class="comments">
-<h2>Comments</h2>
-
-{% for message in messages %}
-<p>{{ message.from }}: {{ message.text }} @{{ message.created | date: '%d-%m-%Y %H:%M' }}</p>
-{% else %}
-<p>Er zijn nog geen berichten voor dit team.</p>
-{% endfor %}
-
- <section>
-<h3>Voeg een bericht toe</h3>
-  <form method="post" action="/">
-    <label>
-      Naam:
-      <input type="text" name="from" required>
-    </label>
-    <label>
-      Bericht:
-      <textarea name="text" required></textarea>
-    </label>
-    <button type="submit">Verstuur</button>
-  </form>
-</section>
-</div>
 
 {% comment %} Kyan {% endcomment %}
 
@@ -216,4 +185,4 @@
 
 <script src="slider.js"></script>
 
-{% render 'views/end.liquid', squads: squads %}
+{% render 'views/foot.liquid', squads: squads %}
