--- a/views/index.liquid
+++ b/views/index.liquid
@@ -160,7 +160,9 @@
 
 <div class="year">
   {% comment %} hier komt de waarde die ook zichtbaar is op de slider {% endcomment %}
-    <h2 class="yearof">2003</h2>
+    <h2 class="active yearof"><a href="/">2003</a></h2>
+
+    <h2 class="yearof"> <a href="/ofour">2004</a></h2>
 
     {% comment %} <section class="slidecontainer">
       <input class="slider" type="range" min="1970" max="2010" value="1970" class="slider" id="sliderControl">
